<resources>
    <string name="app_name">Jay &amp; Kay Café</string>
    <string name="coffee">Order Coffee</string>
    <string name="coffeeLunch">Order Coffee &amp; Lunch</string>
    <string name="lunch">Order Lunch</string>
    <string name="americano">Americano</string>
    <string name="latte">Latte</string>
    <string name="cappacino">Cappacino</string>
    <string name="flat_white">Flat White</string>
    <string name="hot_choc">Hot Chocolate</string>
    <string name="tea">Tea</string>
    <string name="herbal_tea">Herbal Tea</string>
    <string name="order">Proceed to Payment</string>
    <string name="a_descript">A single shot of espresso
        combined with four ounces of hot water</string>
    <string name="extended_fab_content_desc">efab</string>
    <string name="extended_fab_label">efab</string>
    <string name="total">Total:</string>
    <string name="orderTotal">€ Total</string>
    <string name="AmericanoPrice">€2.50</string>
    <string name="CappaPrice">€2.80</string>
    <string name="lattePrice">€2.60</string>
    <string name="sitIn">Sit In</string>
    <string name="takeaway">TakeAway</string>
    <string name="smallCup">Small</string>
    <string name="largeCup">Large</string>
    <string name="chooseQuantity">Coffee Quantity</string>
    <string name="chooseSize">Coffee Size</string>
    <string name="where">Sit in JK café or TakeAway?</string>
    <string name="collectTime">_____ : _____</string>
    <string name="collection_Time">Collection Time:</string>
    <string name="when_want_coffee">When do you want your Coffee?</string>
    <string name="error">Open time 07:00am - 06:00pm</string>
    <string name="action_receipts">Your Receipts</string>
    <string name="action_order">Order</string>

    <string name="menu_order">Order Coffee</string>
    <string name="menu_receipts">View Receipts</string>
    <string name="menu_favourites">Your favourites</string>
    <string name="menu_about">About JK Café</string>
    <string name="nav_header_desc">nav_header</string>
    <string name="nav_header_subtitle">Your Profile</string>
    <string name="nav_header_title">JK Café Menu</string>
    <string name="menu_share">share</string>
    <string name="menu_send">send</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>

    <string name="action_home">Home</string>
    <string name="welcome">Welcome to JK Café</string>
    <string name="menu_home">Home</string>
    <string name="action_about">About Us</string>
    <string name="about">We are JK Café,
     your new favourite local coffee chain.
        Use our app to order your coffee ahead of time.
        Don\'t worry about forgetting your JK loyalty card.
        We virtually stamp it for you every time you buy a coffee online!</string>

    <string name="delete_all">Delete All</string>
    <string name="messageLoading">Please wait while the Orders are Loading..</string>

    <string name="quantity_hint">0</string>

    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="login">Log In</string>
    <string name="SignupText">Already have an account?</string>
    <string name="signupBtn">Sign Up here</string>
    <string name="sign_up">Sign Up</string>
    <string name="logInText">Don\'t have an Account?</string>
    <string name="logInBtn">Log In Here</string>
    <string name="logout">Log out</string>
    <string name="deleteBtn">deleteBtn</string>
    <string name="your_order">Your Order</string>
    <string name="header_email">jay@email.com</string>

    <string name="pay">Please enter you card details to pay for your order</string>
    <string name="card_number">0000 0000 0000 0000</string>
    <string name="card">Card number:</string>
    <string name="cvs">CVS number:</string>
    <string name="cvs_number">000</string>
    <string name="card_name">Card Holder Name:</string>
    <string name="cardName">Your Name Here</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="action_edit">Edit</string>
    <string name="update_order">Update Order</string>
    <string name="totalPrice">€0.00</string>
    <string name="aboutUs">About Us</string>
    <string name="quantity">Quantity:</string>
    <string name="where2">Sit In/Takeaway:</string>
    <string name="back">Back</string>
    <string name="payment">Payment Details</string>
    <string name="fill_all_fields">* Fill in all Fields</string>
    <string name="asterisk">*</string>

    <string name="cafe_location">JK Café locations</string>

    <string name="sign_in_google">Sign In with Google</string>
    <string name="sign_in_email">Sign In with Email</string>
    <string name="sign_in_phone">Sign In with Phone</string>
    <string name="desc_firebase_lockup">firebase look up</string>
    <string name="choose_cafe">Search below for the JK Café near you</string>
    <string name="notes">Requests....</string>
    <string name="type">Coffee</string>
    <string name="map">Find a Cafe</string>
    <string name="loyalty_card">Your loyalty Card:</string>

    <string-array name="coffeeType_array">
        <item>Americano</item>
        <item>Latte</item>
        <item>Cappacino</item>
        <item>Flat White</item>
        <item>Hot Chocolate</item>
        <item>Tea</item>
    </string-array>
</resources>
