<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Order">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/chooseQuantity"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:padding="5dp"
                android:text="@string/chooseQuantity"
                android:textColor="@color/colorWhite" />

            <TableRow>
                <TextView
                    android:id="@+id/americano"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center"
                    android:text="@string/americano" />

                <NumberPicker
                    android:id="@+id/americano_quantity"
                    style="@android:style/Widget.Material.NumberPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <TextView
                android:id="@+id/chooseSize"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:padding="5dp"
                android:text="@string/chooseSize"
                android:textColor="@color/colorWhite" />

            <TableRow>
                <ImageView
                    android:id="@+id/smallOrder"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="40dp"
                    android:layout_gravity="bottom"
                    android:src="@mipmap/coffee_cup" />

                <RadioGroup
                    android:id="@+id/coffeeCup"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp">
                    <RadioButton
                        android:id="@+id/small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/smallCup"
                        android:textColor="@color/colorGrey"/>
                    <RadioButton
                        android:id="@+id/large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/largeCup"
                        android:textColor="@color/colorGrey"/>
                </RadioGroup>
            </TableRow>

            <TextView
                android:id="@+id/where"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:padding="5dp"
                android:text="@string/where"
                android:textColor="@color/colorWhite" />

            <RadioGroup
                android:id="@+id/paymentMethod"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="120dp"
                android:layout_marginBottom="10dp">

                <RadioButton
                    android:id="@+id/sitIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/sitIn"
                    android:textColor="@color/colorGrey" />

                <RadioButton
                    android:id="@+id/takeaway"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/takeaway"
                    android:textColor="@color/colorGrey"/>
            </RadioGroup>

            <TableRow
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/chooseQuantity"
                android:textColor="@color/colorBright">

                <TextView
                    android:id="@+id/Order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:layout_marginStart="130dp"
                    android:text="@string/total"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/orderTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:text="@string/orderTotal" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/chooseTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/collectTime" />

                <EditText
                    android:id="@+id/collectTime"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/hint_collect_time"
                    android:inputType="date"
                    android:maxLength="5"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark" />
            </TableRow>


            <Button
                android:id="@+id/orderBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginEnd="120dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_btn"
                android:text="@string/order"
                android:textColor="@color/colorWhite" />
        </TableLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>