<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@mipmap/logo_01"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLength="40"
            android:maxLines="1"
            android:padding="8dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLength="12"
            android:maxLines="1"
            android:padding="8dp"
            android:textSize="16sp" />

            <Button
                android:id="@+id/signUpBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="40dp"
                android:background="@color/colorPrimary"
                android:padding="8dp"
                android:text="@string/sign_up"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:textAlignment="center"
            android:text="@string/logInText"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

            <Button
                android:id="@+id/loginTxtBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:text="@string/logInBtn"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />


        </TableLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>

